# headroom

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  RUST_DEV.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  docker.yml  release.yml  rust.yml
crates/headroom-core/: Cargo.toml
crates/headroom-ffi/: Cargo.toml  build.rs
crates/headroom-ffi/src/: headroom.h  lib.rs
crates/headroom-proxy/: Cargo.toml
crates/headroom-proxy/src/: config.rs  lib.rs  main.rs  proxy.rs
crates/headroom-proxy/src/bedrock/: eventstream_to_sse.rs  invoke.rs  invoke_streaming.rs
crates/headroom-proxy/src/cache_stabilization/: mod.rs
crates/headroom-proxy/src/compression/: live_zone_anthropic.rs  live_zone_openai.rs  live_zone_responses.rs  mod.rs
crates/headroom-proxy/src/handlers/: mod.rs
crates/headroom-proxy/src/vertex/: raw_predict.rs
crates/headroom-proxy/tests/: e2e_real.rs  integration_chat_completions.rs  integration_compression.rs  sse_framing.rs  sse_openai_responses.rs
docs/: getting-started.md  index.md  integration-guide.md  proxy.md  quickstart.md  typescript-sdk.md
docs/spec/: 005-integrations.md  006-actors.md  007-behavior.md  008-capabilities.md  009-compliance.md  010-data.md  011-deployment.md  013-disaster-recovery.md  015-interfaces.md  018-policies.md
e2e/_lib/: harness.py
e2e/init/: run.py
e2e/wrap/: run.py
headroom/: __init__.py  _version.py  compress.py  paths.py  release_version.py
headroom/backends/: litellm.py
headroom/cache/: compression_cache.py  compression_store.py
headroom/ccr/: mcp_server.py
headroom/cli/: init.py  main.py  proxy.py  wrap.py
headroom/image/: trained_router.py
headroom/learn/: writer.py
headroom/mcp_registry/: codex.py
headroom/memory/: traffic_learner.py
headroom/pricing/: litellm_pricing.py
headroom/providers/: anthropic.py
headroom/proxy/: auth_mode.py  cost.py  helpers.py  loopback_guard.py  memory_handler.py  models.py  prometheus_metrics.py  responses_converter.py  server.py
headroom/rtk/: installer.py
headroom/subscription/: __init__.py  codex_rate_limits.py  models.py  tracker.py
headroom/telemetry/: beacon.py
headroom/tokenizers/: base.py
headroom/transforms/: adaptive_sizer.py  compression_policy.py  compression_units.py  content_router.py  intelligent_context.py  smart_crusher.py  tag_protector.py
plugins/openclaw/: package.json
sdk/golang/: README.md  chat.go  client.go  compress.go  config.go  doc.go  errors.go  errors_test.go  go.mod  hooks.go  hooks_test.go  integration_test.go  models.go  options.go  parity_test.go  shared_context.go  simulate.go  types.go
sdk/typescript/: package-lock.json  package.json  tsup.config.ts
specify/: 016-observability.md  017-operations.md
tests/: test_anthropic_pre_upstream_backpressure.py  test_backend_bugs.py  test_cli_learn.py  test_cli_proxy_env.py  test_compression_cache.py  test_compression_observability.py  test_compression_store.py  test_compression_units.py  test_image_compressor.py  test_memory_handler_concurrent_init.py  test_openai_codex_routing.py  test_openai_codex_ws_lifecycle.py  test_openai_responses_compression_units.py  test_pr208_changes.py  test_proxy_anthropic_cache_stability.py  test_proxy_dashboard_stats_cache.py  test_proxy_debug_endpoints.py  test_proxy_handler_helpers.py  test_proxy_healthchecks.py  test_proxy_openai_responses_bypass.py  test_proxy_responses_phase_preservation.py  test_proxy_savings_history.py  test_proxy_streaming_request_logger.py  test_release_version.py  test_release_workflows.py  test_responses_pyo3_compression.py  test_responses_ws_pyo3_compression.py  test_strands_tokenizer.py  test_subscription_tracker.py  test_transforms_content_router.py  test_transforms_search_compressor.py
tests/test_cli/: test_unwrap_claude.py  test_wrap_codex.py  test_wrap_copilot.py  test_wrap_openclaw.py
tests/test_install/: test_providers.py
tests/test_learn/: test_integration.py
tests/test_mcp_registry/: test_codex_registrar.py
tests/test_memory/: test_traffic_learner.py
tests/test_transforms/: test_tag_protector.py  (+1 more)
wiki/: cli.md  metrics.md
(+59 files in other folders)
