[package]
name = "headroom-proxy"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Headroom compression proxy (Rust, axum)."

[[bin]]
name = "headroom-proxy"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
headroom-core = { path = "../headroom-core" }

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
